--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="column right">
                 <dix class="text">I'm Josue and I'm a <span class="typing"></span></dix>
                 <p>I am a student attending UC Santa Cruz. My hobbies include coding and videogames. I enjoy learning new material that seems exciting which led me to becoming a self taught programmer. My goal is to become a front end developer and making my way to create my own start-up company. I hope this w2ebsite is eveident enough to show my ambition for programming! </p>
-                <a href="Josue Franco Resume.pdf" download="Josue Franco's Resume">Download CV</a>
+                <a href="Josue Franco Resume.docx" download="Josue Franco's Resume">Download CV</a>
             </div>
         </div>
     </div>
@@ -156,8 +156,8 @@
                             <div class="row">
                                 <i class="fas fa-map-marker-alt"></i>
                                 <div class="info">
-                                    <div class="head">Address</div>
-                                    <div class="sub-title">California, USA</div>
+                                    <div class="head">Location</div>
+                                    <div class="sub-title">Merced, CA</div>
                                 </div>
                             </div>
                             <div class="row">
