added meta tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portfolio</title>
+    <meta name="title" content="Josue's Website 2023 | Front-End Journey">
+    <meta name='description' content="A fully responsive website about my Front-End Development journey!">
+
+    <meta property="og:title" content="Josue's Wesbite" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://jifranco.github.io/" />
+    <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
+    
+    <title>Josue's Website</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
     <script src="https://kit.fontawesome.com/e3d44dccf1.js" crossorigin="anonymous"></script>
@@ -50,7 +58,7 @@
             <div class="column right">
                 <dix class="text">I'm Josue and I'm a <span class="typing"></span></dix>
                 <p>I am a student attending UC Santa Cruz. My hobbies include coding and videogames. I enjoy learning new material that seems exciting which led me to becoming a self taught programmer. My goal is to become a front end developer and making my way to create my own start-up company. I hope this w2ebsite is eveident enough to show my ambition for programming! </p>
-                <a href="Josue Franco Resume (4).pdf" download="Josue Franco's Resume">Download CV</a>
+                <a href="Josue Franco Resume 2023.pdf" download="Josue Franco's Resume">Download CV</a>
             </div>
         </div>
     </div>
@@ -78,7 +86,7 @@
             <div class="card">
                 <div class="box">
                     <i class="fas fa-code"></i>
-                    <div class="text">FrontEnd</div>
+                    <div class="text">Front-End</div>
                     <p>Effectively use APIs available to create easy-to-use websites</p>
                 </div>
             </div>
