--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
             </div>
             <div class="column right">
                 <dix class="text">I'm Josue and I'm a <span class="typing"></span></dix>
-                <p>I am a student attending UC Santa Cruz. My hobbies include coding and videogames. I enjoy learning new material that seems exciting which led me to becoming a self taught programmer. My goal is to become a front end developer and making my way to create my own start-up company. I hope this w2ebsite is eveident enough to show my ambition for programming! </p>
-                <a href="Josue Franco Resume 2023.pdf" download="Josue Franco's Resume">Download CV</a>
+                <p>I am a student attending Calfifornia State University, Stanislaus. My hobbies include coding and videogames. I enjoy learning new material that seems exciting which led me to becoming a self taught programmer. My goal is to become a front end developer and making my way to create my own start-up company. I hope this w2ebsite is eveident enough to show my ambition for programming! </p>
+                <a href="Josue Franco Resume 2023.pdf" download="Josue Franco's Resume">Download Resume</a>
             </div>
         </div>
     </div>
@@ -87,7 +87,7 @@
                 <div class="box">
                     <i class="fas fa-code"></i>
                     <div class="text">Front-End</div>
-                    <p>Effectively use APIs available to create easy-to-use websites</p>
+                    <p>Effectively use JavaScript, React, and CSS frameworks to create responsive websites</p>
                 </div>
             </div>
            </div>
