--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My experience.</div>
-                    <p>I started programming as I entered in a University course about using Python to catalogue Astronimal Data. I started coding with Python and Jupyter Notebook. Since then, I started from the beginning with HTML and CSS. I have started making projects (such as this website) utilizing HTML, CSS, and a little bit of JavaScript. I am currently taking more University classes that involves data structures and algorithms using Python/Javascript.</p>
+                    <p>I started programming at 19 with Python and Jupyter Notebook. Since then, I started from the beginning with HTML, CSS, and JavaScript. If you go on to my <a href="https://github.com/jifranco">GitHub</a>, you can find my repositories where I push all of my projects and assignments to journal my progress.</p>
                     <!--<a href="#">Read more</a>>-->
                 </div>
                 <div class="column right">
