--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
                 <div class="box">
                     <i class="fa-solid fa-bug-slash"></i>
                     <div class="text">Debugging</div>
-                    <p>Fix any errors and catch whatever bugs may be in your code efficiently</p>                
+                    <p>Efficiently fix any errors and bugs that may be in your code </p>                
             </div>
             </div>
             <div class="card">
                 <div class="box">
                     <i class="fas fa-code"></i>
                     <div class="text">Front-End</div>
-                    <p>Effectively use JavaScript, React, and CSS frameworks to create responsive websites</p>
+                    <p>Effectively use Front-End languages to create responsive websites</p>
                 </div>
             </div>
            </div>
