added async to script

--- a/index.html
+++ b/index.html
@@ -184,6 +184,6 @@
         <footer>
             <span>Created By <a href="https://www.linkedin.com/in/jifranco/">Josue Franco</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
         </footer>
-    <script src="script.js"></script>
+    <script src="script.js" async></script>
 </body>
 </html>
