--- a/index.html
+++ b/index.html
@@ -53,12 +53,23 @@
         <h2 class="title">About Me</h2>
         <div class="about-content">
             <div class="column left">
-                <img src="images/IMG-6750.jpg" alt="">
+                <img src="images/IMG_9807.jpg" alt="" style="object-fit: cover; object-position: 100% 50%">
             </div>
             <div class="column right">
                 <dix class="text">I'm Josue and I'm a <span class="typing"></span></dix>
-                <p>I am a student attending Calfifornia State University, Stanislaus. My hobbies include coding and videogames. I enjoy learning new material that seems exciting which led me to becoming a self taught programmer. My goal is to become a front end developer and making my way to create my own start-up company. I hope this w2ebsite is eveident enough to show my ambition for programming! </p>
-                <a href="Josue Franco Resume 2024 software engineer.pdf" download="Josue Franco's Resume">Download Resume</a>
+                <!-- <p>I am an alumni from Calfiornia State University, Stanislaus. 
+                    My hobbies include coding and videogames. 
+                    I enjoy learning new material that seems exciting which led me to becoming a self taught programmer.
+                    My goal is to become a front end developer and making my way to create my own start-up company. 
+                    I hope this website is evident enough to show my ambition for programming! </p> -->
+                    <p>Fueled by a passion for code and a drive to turn ideas into reality, 
+                        I honed my programming skills as a self-taught developer after graduating from California State University, 
+                        Stanislaus. Beyond just hobbies like coding and video games, 
+                        programming ignites my creativity and problem-solving spirit. 
+                        My ultimate goal? Spearheading the development of my own innovative startup through front-end development.
+                        This website is just the beginning 
+                        – a testament to my dedication and a glimpse into the future I'm actively building.</p>
+                <a href="Josue Franco Resume 2024 software engineer (1).pdf" download="Josue Franco's Resume">Download Resume</a>
             </div>
         </div>
     </div>
@@ -71,9 +82,9 @@
         <div class="serv-content">
             <div class="card">
                 <div class="box">
-                    <i class="fas fa-paint-brush"></i>
-                    <div class="text">Web Design</div>
-                    <p>Able to create custom templates in your preference</p>
+                    <i class="fas fa-code"></i>
+                    <div class="text">Software Engineering</div>
+<p>Building robust and scalable software solutions.</p>
                 </div>
             </div>
             <div class="card">
@@ -85,9 +96,9 @@
             </div>
             <div class="card">
                 <div class="box">
-                    <i class="fas fa-code"></i>
+                    <i class="fas fa-laptop-code"></i>
                     <div class="text">Front-End</div>
-                    <p>Effectively use Front-End languages to create responsive websites</p>
+                    <p>Building user interfaces and crafting interactive web experiences.</p>
                 </div>
             </div>
            </div>
@@ -102,42 +113,42 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My experience.</div>
-                    <p>I started programming at 19 with Python and Jupyter Notebook. Since then, I started from the beginning with HTML, CSS, and JavaScript. If you go on to my <a href="https://github.com/jifranco">GitHub</a>, you can find my repositories where I push all of my projects and assignments to journal my progress.</p>
+                    <p>Programming sparked my interest at 19, starting with Python and Jupyter Notebook. I then took a step back to solidify my foundation in web development by learning HTML, CSS, and JavaScript from scratch. Head over to my <a href="https://github.com/jifranco">GitHub profile</a> to see my project repositories, a record of my coding journey!</p>
                     <!--<a href="#">Read more</a>>-->
                 </div>
                 <div class="column right">
-                    <div class="bars">
+                    <h4>Levels of Expertise</h4><div class="bars">
                         <div class="info">
                             <span>HTML</span>
-                            <span>90%</span>
+                            <span>Advanced</span>
                         </div>
                         <div class="line html"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>CSS</span>
-                            <span>65%</span>
+                            <span>Profiecient</span>
                         </div>
                         <div class="line css"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>JavaScript</span>
-                            <span>70%</span>
+                            <span>Profiecient</span>
                         </div>
                         <div class="line js"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>Python</span>
-                            <span>50%</span>
+                            <span>Advanced</span>
                         </div>
                         <div class="line python"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>Data Structure & Algorithms</span>
-                            <span>65%</span>
+                            <span>Intermediate</span>
                         </div>
                         <div class="line algo"></div>
                     </div>
@@ -155,34 +166,40 @@
                         <p>More than happy to connect with you!</p>
                         <div class="icons">
                             <div class="row">
-                                <i class="fas fa-user"></i>
-                                <div class="info">
-                                    <div class="head">Name</div>
-                                    <div class="sub-title">Josue Franco</div>
-                                </div>
+                              <i class="fas fa-user"></i>
+                              <div class="info">
+                                <div class="head">Name</div>
+                                <div class="sub-title">Josue Franco</div>
+                              </div>
                             </div>
                             <div class="row">
-                                <i class="fas fa-map-marker-alt"></i>
-                                <div class="info">
-                                    <div class="head">Location</div>
-                                    <div class="sub-title">Merced, CA</div>
-                                </div>
+                              <i class="fas fa-map-marker-alt"></i>
+                              <div class="info">
+                                <div class="head">Location</div>
+                                <div class="sub-title">Le Grand, CA</div>
+                              </div>
                             </div>
                             <div class="row">
-                                <i class="fas fa-envelope"></i>
-                                <div class="info">
-                                    <div class="head">Email</div>
-                                    <div class="sub-title">josuefranco32@gmail.com</div>
-                                </div>
+                              <i class="fas fa-envelope"></i>
+                              <div class="info">
+                                <div class="head">Email</div>
+                                <div class="sub-title">josuefranco32@gmail.com</div>
+                              </div>
                             </div>
-                        </div>
+                            <div class="row">
+                              <i class="fab fa-linkedin"></i>  <div class="info">
+                                <div class="head">LinkedIn</div>
+                                <a href="https://www.linkedin.com/" class="sub-title">Josue Franco</a>
+                              </div>
+                            </div>
+                          </div>
                     </div>
                 </div>
             </div>
         </section>
         <!-- footer section start -->
         <footer>
-            <span>Created By <a href="https://www.linkedin.com/in/jifranco/">Josue Franco</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+            <span>Created By <a href="https://www.linkedin.com/in/jifranco/">Josue Franco</a> | <span class="far fa-copyright"></span> 2024 All rights reserved.</span>
         </footer>
     <script src="script.js" async></script>
 </body>
